syntax = "proto3";

package mago;
option go_package = "github.com/alirezastack/mago";

message CreateUserRequest {
  string phone = 1;
  string first_name = 2;
  string last_name = 3;
}

message CreateUserResponse {
  string user_id = 1;
}

service MagoService{
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
}